Được tạo bằng Colaboratory

--- a/bt_list.ipynb
+++ b/bt_list.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "bt list.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMWT/cos/AJuRWkyQLLuwgO",
+      "authorship_tag": "ABX9TyMN4MuNfpAMedLAY/g5InBp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "WMFM2tW66SRw",
-        "outputId": "daac001d-74f3-4e11-da16-177e2c09df10",
+        "outputId": "5debf5aa-d1d3-4fdb-a3b3-393ef0b9e603",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -41,18 +41,18 @@
         "x = x + y\n",
         "print(\"giá trị của x là \",x)\n",
         "print(\"giá trị đầu tiên của x là \",x[0])\n",
-        "print(\"giá trị cuối cùng của x là \",x[len(x)-11])\n",
+        "print(\"giá trị cuối cùng của x là \",x[len(x)-1])\n",
         "print(\"giá trị từ đầu đến 5 của x là \", x[:5])\n",
         "print(\"giá trị từ 3 đến cuối cùng  của x là \", x[3:])"
       ],
-      "execution_count": 27,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "giá trị của x là  [18, 'Huế', 12, 45, -1, -0.56, 'abc']\n",
             "giá trị đầu tiên của x là  18\n",
-            "giá trị cuối cùng của x là  45\n",
+            "giá trị cuối cùng của x là  abc\n",
             "giá trị từ đầu đến 5 của x là  [18, 'Huế', 12, 45, -1]\n",
             "giá trị từ 3 đến cuối cùng  của x là  [45, -1, -0.56, 'abc']\n"
           ],
