--- a/Bản_sao_của_bai_tap_kiem_dinh_z_t.ipynb
+++ b/Bản_sao_của_bai_tap_kiem_dinh_z_t.ipynb
@@ -323,13 +323,37 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "100yUyFXJT5v"
+        "id": "100yUyFXJT5v",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "33454d87-c738-4f01-fdad-9ac05222d2a7"
       },
       "source": [
-        "#Code here\n"
+        "#Code here\n",
+        "alpha = 0.01\n",
+        "null_mean = 32\n",
+        "#sinh ngẫu nhiên một mẫu 60 phần tử có trung bình mẫu là 30.7 độ lệch chuẩn là 3.8\n",
+        "samples = np.random.normal(30.7,3.8,60)\n",
+        "#kiểm định z\n",
+        "ztest_Score, p_value= ztest(samples, value = null_mean, alternative='larger')\n",
+        "print('z = ', ztest_Score, '; p = ', p_value)\n",
+        "if (p_value <  alpha)and (ztest_Score<0):\n",
+        "  print(\"Có bằng chứng để bác bỏ giả thuyết H0\")\n",
+        "else:\n",
+        "  print(\"Chưa có bằng chứng để bác bỏ giả thuyết H0\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "z =  -2.3644816296754576 ; p =  0.9909723386143603\n",
+            "Chưa có bằng chứng để bác bỏ giả thuyết H0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -343,13 +367,33 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "m6i80SzIJT5v"
+        "id": "m6i80SzIJT5v",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7dbe6d14-ac1d-400a-dc34-ba9afd3abce4"
       },
       "source": [
-        "#Code here"
+        "#Code here\n",
+        "#xác định thông số\n",
+        "null_mean = 368\n",
+        "\n",
+        "#Sinh ngẫu nhiên một mẫu 25 phần tử có trung bình mẫu là 372.5, độ lệch chuẩn là 25\n",
+        "samples = np.random.normal(372.5, 25, 25)\n",
+        "#Kiểm định t\n",
+        "ttest_Score, p_value = st.ttest_1samp(samples, null_mean)\n",
+        "print('p_value = ',p_value)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "p_value =  0.4428211078459491\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -363,13 +407,33 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pMQHn59eJT5w"
+        "id": "pMQHn59eJT5w",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "232f7e40-9f95-41e0-dcea-a3c44b7890d8"
       },
       "source": [
-        "#Code here"
+        "#Code here\n",
+        "#xác định thông số\n",
+        "null_mean = 368\n",
+        "\n",
+        "#Sinh ngẫu nhiên một mẫu 25 phần tử có trung bình mẫu là 372.5, độ lệch chuẩn là 25\n",
+        "samples = np.random.normal(372.5, 25, 25)\n",
+        "#Kiểm định t\n",
+        "ttest_Score, p_value = st.ttest_1samp(samples, null_mean)\n",
+        "print('p_value = ',p_value)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "p_value =  0.14453760801695997\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -383,13 +447,31 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TkrzuSi4JT5w"
+        "id": "TkrzuSi4JT5w",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1690d08f-374a-45e3-a21b-a967b3d1df26"
       },
       "source": [
-        "#Code here"
+        "#Code here\n",
+        "null_mean = 32\n",
+        "#sinh ngẫu nhiên một mẫu 60 phần tử có trung bình mẫu là 30.7 độ lệch chuẩn là 3.8\n",
+        "samples = np.random.normal(30.7,3.8,60)\n",
+        "#kiểm định z\n",
+        "ztest_Score, p_value= ztest(samples, value = null_mean, alternative='larger')\n",
+        "print(' p = ', p_value)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            " p =  0.9945267926130352\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -403,13 +485,38 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "IQOaQDfAJT5x"
+        "id": "IQOaQDfAJT5x",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "540505ee-fa6a-46ab-f655-9916649c6f3e"
       },
       "source": [
-        "#Code here"
+        "#Code here\n",
+        "alpha = 0.05\n",
+        "null_mean = 368\n",
+        "\n",
+        "#Sinh ngẫu nhiên một mẫu 25 phần tử có trung bình mẫu là 372.5, độ lệch chuẩn là 25\n",
+        "samples = np.random.normal(372.5, 12, 36)\n",
+        "#Kiểm định z\n",
+        "ztest_Score, p_value= ztest(samples, value = null_mean, alternative='larger')\n",
+        "print('z = ', ztest_Score, '; p = ', p_value)\n",
+        "if (p_value <  alpha/2):\n",
+        "  print(\"Có bằng chứng để bác bỏ giả thuyết H0\")\n",
+        "else:\n",
+        "  print(\"Chưa có bằng chứng để bác bỏ giả thuyết H0\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "z =  2.5162653934398738 ; p =  0.0059302917120765235\n",
+            "Có bằng chứng để bác bỏ giả thuyết H0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -423,13 +530,36 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3SfzywjYJT5x"
+        "id": "3SfzywjYJT5x",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d4628fc5-cbaa-4580-897f-ce133c3e3c14"
       },
       "source": [
-        "#Code here"
+        "#Code here\n",
+        "alpha = 0.01\n",
+        "null_mean = 3.25\n",
+        "#Sinh ngẫu nhiên một mẫu 64 phần tử có trung bình mẫu là 3.238, độ lệch chuẩn là 0.117\n",
+        "samples = np.random.normal(3.238, 0.117, 64)\n",
+        "ztest_Score, p_value= ztest(samples, value = null_mean, alternative='larger')\n",
+        "print('z = ', ztest_Score, '; p = ', p_value)\n",
+        "if (p_value <  alpha/2):\n",
+        "  print(\"Có bằng chứng để bác bỏ giả thuyết H0\")\n",
+        "else:\n",
+        "  print(\"Chưa có bằng chứng để bác bỏ giả thuyết H0\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "z =  -1.6611084494815047 ; p =  0.9516541661045205\n",
+            "Chưa có bằng chứng để bác bỏ giả thuyết H0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -443,13 +573,37 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rFbP4Q4SJT5x"
+        "id": "rFbP4Q4SJT5x",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "eafc8a93-58ef-45b1-a09f-a83f1d93b5f0"
       },
       "source": [
-        "#Code here"
+        "#Code here\n",
+        "alpha = 0.05\n",
+        "null_mean = 140\n",
+        "#Sinh ngẫu nhiên một mẫu 20 phần tử có trung bình mẫu là 138.47, độ lệch chuẩn là 2.66\n",
+        "samples = np.random.normal(138.47, 2.66, 20)\n",
+        "#Kiểm định t\n",
+        "ttest_Score, p_value = st.ttest_1samp(samples, null_mean)\n",
+        "print('t = ',ttest_Score,', p = ',p_value)\n",
+        "if(p_value <  alpha) and (ttest_Score>0):\n",
+        "  print(\"Có bằng chứng để bác bỏ giả thuyết H0\")\n",
+        "else:\n",
+        "  print(\"Chưa có bằng chứng để bác bỏ giả thuyết H0\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "t =  -1.6268715188936116 , p =  0.12023506813790545\n",
+            "Chưa có bằng chứng để bác bỏ giả thuyết H0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -463,13 +617,37 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lIXnh3NyJT5x"
+        "id": "lIXnh3NyJT5x",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1126ab7e-5b3e-4d98-8243-977479e5f396"
       },
       "source": [
-        "#Code here"
+        "#Code here\n",
+        "\n",
+        "a = np.array([8,11,0,4,7,8,10,5,8,3])\n",
+        "alpha = 0.05\n",
+        "null_mean = 5\n",
+        "#Kiểm định t\n",
+        "ttest_Score, p_value = st.ttest_1samp(a, null_mean)\n",
+        "print('t = ',ttest_Score,', p = ',p_value)\n",
+        "if(p_value <  alpha) and (ttest_Score>0):\n",
+        "  print(\"Có bằng chứng để bác bỏ giả thuyết H0\")\n",
+        "else:\n",
+        "  print(\"Chưa có bằng chứng để bác bỏ giả thuyết H0\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "t =  1.3125000000000004 , p =  0.2218341554238571\n",
+            "Chưa có bằng chứng để bác bỏ giả thuyết H0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
