--- a/huong_dan_gia_dinh_ANOVA.ipynb
+++ b/huong_dan_gia_dinh_ANOVA.ipynb
@@ -20,7 +20,7 @@
       "version": "3.7.3"
     },
     "colab": {
-      "name": " huong-dan-gia-dinh-ANOVA.ipynb",
+      "name": "huong-dan-gia-dinh-ANOVA.ipynb",
       "provenance": [],
       "include_colab_link": true
     }
@@ -64,7 +64,7 @@
       "source": [
         "#Bước 1: Hãy tạo một tập dữ liệu mẫu sample_1 với kích thước 100 tuân theo phân phối chuẩn"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -74,7 +74,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "53d36a87-e7a5-460e-c77e-534c675bd93e"
+        "outputId": "0f513e93-0ffc-4950-cc4b-cfe748a22246"
       },
       "source": [
         "from numpy.random import seed\n",
@@ -84,7 +84,7 @@
         "print(sample_1)\n",
         "\n"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -129,7 +129,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6f0516c8-a383-4fa1-be0a-d753536fd77a"
+        "outputId": "58abc3d3-a274-4d0c-f545-be49ed79c945"
       },
       "source": [
         "from numpy.random import seed\n",
@@ -138,7 +138,7 @@
         "sample_2 = poisson(5, 100)\n",
         "print(sample_2)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -173,30 +173,38 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ac5c4143-2c7b-4518-e34a-b07040d5594d"
+        "outputId": "0ab65a88-4054-41a3-df95-767a99e1faea"
       },
       "source": [
         "import numpy as np\n",
         "from scipy import stats\n",
+        "from scipy.stats import bartlett\n",
         "\n",
-        "p_1 = stats.shapiro(sample_1)[1]\n",
-        "p_2 = stats.shapiro(sample_2)[1]\n",
-        "if p_1 > 0.05:\n",
-        "    print(f'mẫu 1 tuân theo phân phối chuẩn')\n",
-        "else:\n",
-        "    print(f'mẫu 1 không tuân theo phân phối chuẩn')\n",
-        "if p_2 > 0.05:\n",
-        "    print(f'mẫu 2 tuân theo phân phối chuẩn')\n",
-        "else:\n",
-        "    print(f'mẫu 2 không tuân theo phân phối chuẩn')"
+        "#Code kiểm định tính chất thứ 2 của sample_1 và sample_2\n",
+        "# Kiểm định Shapiro-Wilk để xác định xem một mẫu có đến từ phân phối chuẩn hay không.\n",
+        "print(\"Kiểm định Shapiro-Wilk để xem mẫu có tuân theo phân phối chuẩn\")\n",
+        "shapiro_test1 = stats.shapiro(sample_1) \n",
+        "print(\"Statistic =\", shapiro_test1[0], \"\\n\",\n",
+        "      \"p value =\", shapiro_test1[1])\n",
+        "print(\"-----------------------------------------\")\n",
+        "\n",
+        "print(\"Kiểm định Shapiro-Wilk để xem mẫu có tuân theo phân phối Poisson\")\n",
+        "shapiro_test2 = stats.shapiro(sample_2)\n",
+        "print(\"Statistic =\", shapiro_test2[0], \"\\n\",\n",
+        "      \"p value =\", shapiro_test2[1])"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "mẫu 1 tuân theo phân phối chuẩn\n",
-            "mẫu 2 không tuân theo phân phối chuẩn\n"
+            "Kiểm định Shapiro-Wilk để xem mẫu có tuân theo phân phối chuẩn\n",
+            "Statistic = 0.9926937818527222 \n",
+            " p value = 0.8689165711402893\n",
+            "-----------------------------------------\n",
+            "Kiểm định Shapiro-Wilk để xem mẫu có tuân theo phân phối Poisson\n",
+            "Statistic = 0.9581913948059082 \n",
+            " p value = 0.002994443289935589\n"
           ],
           "name": "stdout"
         }
@@ -235,21 +243,70 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9bf35941-6e13-419a-d334-894e7f4f4313"
+        "outputId": "d77ffb08-03b5-44a8-d9ad-05777262d0b1"
       },
       "source": [
-        "p_3 = stats.levene(sample_1,sample_2)[1]\n",
-        "if p_3 > 0.05:\n",
-        "    print('Phương sai bằng nhau')\n",
+        "#Kiểm định bằng bartlett\n",
+        "alpha = 0.05\n",
+        "stat, pvalue = stats.bartlett(sample_1,sample_2)\n",
+        "print(\"Statistic =\", stat, \"\\n\",\n",
+        "      \"p value =\", pvalue)\n",
+        "if pvalue < alpha:\n",
+        "  print(\"Các quần thể không có phương sai bằng nhau\")\n",
         "else:\n",
-        "    print('Phương sai không bằng nhau')"
+        "  print(\"Các quần thể có phương sai bằng nhau\")\n",
+        "  #Xem phương sai của từng biến\n",
+        "  s1, s2 = [np.var(x, ddof=1) for x in [sample_1, sample_2]]\n",
+        "  print(\"Phương sai của sample_1 =\", s1,  \"\\n\",\n",
+        "       \"Phương sai của sample_2 =\", s2,  \"\\n\",)\n",
+        "     "
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Phương sai không bằng nhau\n"
+            "Statistic = 63.63450355500454 \n",
+            " p value = 1.4978261721524518e-15\n",
+            "Các quần thể không có phương sai bằng nhau\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sEK99Ef9yV98",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "136dd744-81af-4079-c52d-ea63eee17fb2"
+      },
+      "source": [
+        "\n",
+        "#Kiểm định bằng Levene\n",
+        "stat, pvalue = stats.levene(sample_1,sample_2)\n",
+        "print(\"Statistic =\", stat, \"\\n\",\n",
+        "      \"p value =\", pvalue)\n",
+        "if pvalue < alpha:\n",
+        "  print(\"Các quần thể không có phương sai bằng nhau\")\n",
+        "else:\n",
+        "  print(\"Các quần thể có phương sai bằng nhau\")\n",
+        "  #Xem phương sai của từng biến\n",
+        "  s1, s2  = [np.var(x, ddof=1) for x in [sample_1,sample_2]]\n",
+        "  print(\"PS của Bus =\", s1, \"\\n\",\n",
+        "      \"PS của Eng =\", s2, \"\\n\",)\n",
+        "     "
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Statistic = 41.69225607760287 \n",
+            " p value = 8.076040873195272e-10\n",
+            "Các quần thể không có phương sai bằng nhau\n"
           ],
           "name": "stdout"
         }
