--- a/phan_tich_anova_1_chieu.ipynb
+++ b/phan_tich_anova_1_chieu.ipynb
@@ -100,18 +100,18 @@
         "id": "TL8nEEj5WLGI",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 195
+          "height": 491
         },
-        "outputId": "57c9ec1c-1eb0-4077-dba5-714f963c9726"
+        "outputId": "c7800ea3-c01e-4645-ac4f-4a1362d837a2"
       },
       "source": [
         "import pandas as pd\n",
         "\n",
         "#ĐỌc dữ liệu\n",
         "df = pd.read_csv(\"https://raw.githubusercontent.com/researchpy/Data-sets/master/difficile.csv\")\n",
-        "df.head()"
+        "df"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -171,17 +171,87 @@
               "      <td>1</td>\n",
               "      <td>4</td>\n",
               "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>6</td>\n",
+              "      <td>2</td>\n",
+              "      <td>5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>7</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>8</td>\n",
+              "      <td>2</td>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>9</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>10</td>\n",
+              "      <td>2</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>10</th>\n",
+              "      <td>11</td>\n",
+              "      <td>3</td>\n",
+              "      <td>7</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>11</th>\n",
+              "      <td>12</td>\n",
+              "      <td>3</td>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>12</th>\n",
+              "      <td>13</td>\n",
+              "      <td>3</td>\n",
+              "      <td>5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>13</th>\n",
+              "      <td>14</td>\n",
+              "      <td>3</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>14</th>\n",
+              "      <td>15</td>\n",
+              "      <td>3</td>\n",
+              "      <td>6</td>\n",
+              "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "   person  dose  libido\n",
-              "0       1     1       3\n",
-              "1       2     1       2\n",
-              "2       3     1       1\n",
-              "3       4     1       1\n",
-              "4       5     1       4"
+              "    person  dose  libido\n",
+              "0        1     1       3\n",
+              "1        2     1       2\n",
+              "2        3     1       1\n",
+              "3        4     1       1\n",
+              "4        5     1       4\n",
+              "5        6     2       5\n",
+              "6        7     2       2\n",
+              "7        8     2       4\n",
+              "8        9     2       2\n",
+              "9       10     2       3\n",
+              "10      11     3       7\n",
+              "11      12     3       4\n",
+              "12      13     3       5\n",
+              "13      14     3       3\n",
+              "14      15     3       6"
             ]
           },
           "metadata": {
@@ -197,17 +267,25 @@
         "id": "W3-8VBvzWLGJ",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 195
+          "height": 508
         },
-        "outputId": "53a1da44-cc70-47e9-d7e4-ff17221a612f"
+        "outputId": "784d231e-26a0-4f1c-ce65-4c4e2b372020"
       },
       "source": [
         "#Loại bỏ cột person, theo bạn thì lý do tại sao?\n",
+        "print('Vì cột \"person\" mnag ý nghĩa đánh số thứ tự (indexing), không có ý nghĩa thống kê')\n",
         "df.drop('person', axis= 1, inplace= True)\n",
-        "df.head()"
+        "df"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Vì cột \"person\" mnag ý nghĩa đánh số thứ tự (indexing), không có ý nghĩa thống kê\n"
+          ],
+          "name": "stdout"
+        },
         {
           "output_type": "execute_result",
           "data": {
@@ -260,17 +338,77 @@
               "      <td>1</td>\n",
               "      <td>4</td>\n",
               "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>2</td>\n",
+              "      <td>5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>2</td>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>2</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>10</th>\n",
+              "      <td>3</td>\n",
+              "      <td>7</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>11</th>\n",
+              "      <td>3</td>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>12</th>\n",
+              "      <td>3</td>\n",
+              "      <td>5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>13</th>\n",
+              "      <td>3</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>14</th>\n",
+              "      <td>3</td>\n",
+              "      <td>6</td>\n",
+              "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "   dose  libido\n",
-              "0     1       3\n",
-              "1     1       2\n",
-              "2     1       1\n",
-              "3     1       1\n",
-              "4     1       4"
+              "    dose  libido\n",
+              "0      1       3\n",
+              "1      1       2\n",
+              "2      1       1\n",
+              "3      1       1\n",
+              "4      1       4\n",
+              "5      2       5\n",
+              "6      2       2\n",
+              "7      2       4\n",
+              "8      2       2\n",
+              "9      2       3\n",
+              "10     3       7\n",
+              "11     3       4\n",
+              "12     3       5\n",
+              "13     3       3\n",
+              "14     3       6"
             ]
           },
           "metadata": {
@@ -286,17 +424,26 @@
         "id": "UHj_IoraWLGJ",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 195
+          "height": 508
         },
-        "outputId": "9cdfb064-76d5-4279-8115-1cc6f64cc54c"
+        "outputId": "e9dbf5fc-b223-4446-d2ad-064f5a79bac4"
       },
       "source": [
+        "\n",
         "#Chuyển đổi giá trị cột dose từ 'định lượng' sang định tính\n",
         "df['dose'].replace({1: 'placebo', 2: 'low', 3: 'high'}, inplace= True)\n",
-        "df.head()"
+        "print(type(df))\n",
+        "df"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n"
+          ],
+          "name": "stdout"
+        },
         {
           "output_type": "execute_result",
           "data": {
@@ -349,17 +496,77 @@
               "      <td>placebo</td>\n",
               "      <td>4</td>\n",
               "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>low</td>\n",
+              "      <td>5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>low</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>low</td>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>low</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>low</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>10</th>\n",
+              "      <td>high</td>\n",
+              "      <td>7</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>11</th>\n",
+              "      <td>high</td>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>12</th>\n",
+              "      <td>high</td>\n",
+              "      <td>5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>13</th>\n",
+              "      <td>high</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>14</th>\n",
+              "      <td>high</td>\n",
+              "      <td>6</td>\n",
+              "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "      dose  libido\n",
-              "0  placebo       3\n",
-              "1  placebo       2\n",
-              "2  placebo       1\n",
-              "3  placebo       1\n",
-              "4  placebo       4"
+              "       dose  libido\n",
+              "0   placebo       3\n",
+              "1   placebo       2\n",
+              "2   placebo       1\n",
+              "3   placebo       1\n",
+              "4   placebo       4\n",
+              "5       low       5\n",
+              "6       low       2\n",
+              "7       low       4\n",
+              "8       low       2\n",
+              "9       low       3\n",
+              "10     high       7\n",
+              "11     high       4\n",
+              "12     high       5\n",
+              "13     high       3\n",
+              "14     high       6"
             ]
           },
           "metadata": {
@@ -376,7 +583,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "919d0967-d966-4bfe-ab4e-bae73533bb41"
+        "outputId": "1b554c29-ce63-46d5-aaca-cbceeaa7cd3a"
       },
       "source": [
         "import numpy as np\n",
@@ -387,7 +594,7 @@
         "placebo = df['libido'][df['dose'] == 'placebo']\n",
         "print(high)"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -410,12 +617,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "be10113b-eb0d-4707-a527-f8c2648244c6"
+        "outputId": "9563ed73-c7fc-40a1-ec00-81801c91fd45"
       },
       "source": [
-        "print(low)"
+        "\n",
+        "print(low)\n",
+        "type(low)"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -428,6 +637,18 @@
             "Name: libido, dtype: int64\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "pandas.core.series.Series"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
         }
       ]
     },
@@ -438,12 +659,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6f00a154-32bc-492f-df50-3480290a1986"
+        "outputId": "7d492476-e6c1-4d23-bb5c-3b74b70572c4"
       },
       "source": [
         "print(placebo)"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -466,16 +687,17 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d7c59903-2f91-4518-eba6-5e1be9e55bd7"
+        "outputId": "5f219a63-4097-42a1-f324-aca73572347b"
       },
       "source": [
+        "\n",
         "import scipy.stats as stats\n",
         "\n",
         "stats.f_oneway(high,\n",
         "               low,\n",
         "               placebo)"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -522,14 +744,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 491
         },
-        "outputId": "b9c763af-f949-4101-8b09-fd378754eb9b"
+        "outputId": "bc468e54-b8e5-423a-af65-7146ea1fe19f"
       },
       "source": [
-        "df = {\"high\" : high, \"low\" : low, \"placebo\" : placebo}\n",
-        "df = pd.DataFrame(df)\n",
+        "\n",
+        "df = pd.DataFrame({'low': low, 'high': high, 'placebo':placebo})\n",
         "df"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -553,8 +775,8 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>high</th>\n",
               "      <th>low</th>\n",
+              "      <th>high</th>\n",
               "      <th>placebo</th>\n",
               "    </tr>\n",
               "  </thead>\n",
@@ -591,62 +813,62 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>5</th>\n",
-              "      <td>NaN</td>\n",
               "      <td>5.0</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>6</th>\n",
-              "      <td>NaN</td>\n",
               "      <td>2.0</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>7</th>\n",
-              "      <td>NaN</td>\n",
               "      <td>4.0</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>8</th>\n",
-              "      <td>NaN</td>\n",
               "      <td>2.0</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>9</th>\n",
-              "      <td>NaN</td>\n",
               "      <td>3.0</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>10</th>\n",
-              "      <td>7.0</td>\n",
               "      <td>NaN</td>\n",
+              "      <td>7.0</td>\n",
               "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>11</th>\n",
-              "      <td>4.0</td>\n",
               "      <td>NaN</td>\n",
+              "      <td>4.0</td>\n",
               "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>12</th>\n",
-              "      <td>5.0</td>\n",
               "      <td>NaN</td>\n",
+              "      <td>5.0</td>\n",
               "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>13</th>\n",
-              "      <td>3.0</td>\n",
               "      <td>NaN</td>\n",
+              "      <td>3.0</td>\n",
               "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>14</th>\n",
-              "      <td>6.0</td>\n",
               "      <td>NaN</td>\n",
+              "      <td>6.0</td>\n",
               "      <td>NaN</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
@@ -654,22 +876,22 @@
               "</div>"
             ],
             "text/plain": [
-              "    high  low  placebo\n",
-              "0    NaN  NaN      3.0\n",
-              "1    NaN  NaN      2.0\n",
-              "2    NaN  NaN      1.0\n",
-              "3    NaN  NaN      1.0\n",
-              "4    NaN  NaN      4.0\n",
-              "5    NaN  5.0      NaN\n",
-              "6    NaN  2.0      NaN\n",
-              "7    NaN  4.0      NaN\n",
-              "8    NaN  2.0      NaN\n",
-              "9    NaN  3.0      NaN\n",
-              "10   7.0  NaN      NaN\n",
-              "11   4.0  NaN      NaN\n",
-              "12   5.0  NaN      NaN\n",
-              "13   3.0  NaN      NaN\n",
-              "14   6.0  NaN      NaN"
+              "    low  high  placebo\n",
+              "0   NaN   NaN      3.0\n",
+              "1   NaN   NaN      2.0\n",
+              "2   NaN   NaN      1.0\n",
+              "3   NaN   NaN      1.0\n",
+              "4   NaN   NaN      4.0\n",
+              "5   5.0   NaN      NaN\n",
+              "6   2.0   NaN      NaN\n",
+              "7   4.0   NaN      NaN\n",
+              "8   2.0   NaN      NaN\n",
+              "9   3.0   NaN      NaN\n",
+              "10  NaN   7.0      NaN\n",
+              "11  NaN   4.0      NaN\n",
+              "12  NaN   5.0      NaN\n",
+              "13  NaN   3.0      NaN\n",
+              "14  NaN   6.0      NaN"
             ]
           },
           "metadata": {
