--- a/huong_dan_gia_dinh_ANOVA.ipynb
+++ b/huong_dan_gia_dinh_ANOVA.ipynb
@@ -59,10 +59,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CBqbYDVmPPcL"
+        "id": "l5vzHLpRk0Ng"
       },
       "source": [
-        "#Bước 1: Hãy tạo một tập dữ liệu mẫu sample_1 với kích thước 100 tuân theo phân phối chuẩn"
+        "import numpy as np\n",
+        "from scipy import stats\n",
+        "import pandas as pd\n",
+        "from scipy.stats import bartlett\n",
+        "import random"
       ],
       "execution_count": null,
       "outputs": []
@@ -70,42 +74,24 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4y8YZziKbenA",
+        "id": "CBqbYDVmPPcL",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0f513e93-0ffc-4950-cc4b-cfe748a22246"
+        "outputId": "6d1339ab-9c6b-4f57-faed-702109569db7"
       },
       "source": [
-        "from numpy.random import seed\n",
-        "from numpy.random import randn\n",
-        "seed(0)\n",
-        "sample_1 = randn(100)\n",
-        "print(sample_1)\n",
-        "\n"
+        "#Bước 1: Hãy tạo một tập dữ liệu mẫu sample_1 với kích thước 100 tuân theo phân phối chuẩn\n",
+        "sample_1 = stats.norm.rvs(loc=20, scale=0.2, size=100)\n",
+        "print(sample_1[:10])"
       ],
       "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[ 1.76405235  0.40015721  0.97873798  2.2408932   1.86755799 -0.97727788\n",
-            "  0.95008842 -0.15135721 -0.10321885  0.4105985   0.14404357  1.45427351\n",
-            "  0.76103773  0.12167502  0.44386323  0.33367433  1.49407907 -0.20515826\n",
-            "  0.3130677  -0.85409574 -2.55298982  0.6536186   0.8644362  -0.74216502\n",
-            "  2.26975462 -1.45436567  0.04575852 -0.18718385  1.53277921  1.46935877\n",
-            "  0.15494743  0.37816252 -0.88778575 -1.98079647 -0.34791215  0.15634897\n",
-            "  1.23029068  1.20237985 -0.38732682 -0.30230275 -1.04855297 -1.42001794\n",
-            " -1.70627019  1.9507754  -0.50965218 -0.4380743  -1.25279536  0.77749036\n",
-            " -1.61389785 -0.21274028 -0.89546656  0.3869025  -0.51080514 -1.18063218\n",
-            " -0.02818223  0.42833187  0.06651722  0.3024719  -0.63432209 -0.36274117\n",
-            " -0.67246045 -0.35955316 -0.81314628 -1.7262826   0.17742614 -0.40178094\n",
-            " -1.63019835  0.46278226 -0.90729836  0.0519454   0.72909056  0.12898291\n",
-            "  1.13940068 -1.23482582  0.40234164 -0.68481009 -0.87079715 -0.57884966\n",
-            " -0.31155253  0.05616534 -1.16514984  0.90082649  0.46566244 -1.53624369\n",
-            "  1.48825219  1.89588918  1.17877957 -0.17992484 -1.07075262  1.05445173\n",
-            " -0.40317695  1.22244507  0.20827498  0.97663904  0.3563664   0.70657317\n",
-            "  0.01050002  1.78587049  0.12691209  0.40198936]\n"
+            "[20.16601191 19.5180118  19.78025441 20.18133667 20.21479013 20.1007889\n",
+            " 20.01343985 19.77648559 19.9634882  20.04924029]\n"
           ],
           "name": "stdout"
         }
@@ -114,13 +100,27 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jkRkup-iPPcM"
+        "id": "jkRkup-iPPcM",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c17d175a-9e2f-4f46-ea4a-25eb98a2a976"
       },
       "source": [
-        "#Bước 2: hãy tạo tập dữ liệu mẫu sample_2 với kích thước 100 tuân theo phân phối Poisson"
+        "#Bước 2: hãy tạo tập dữ liệu mẫu sample_2 với kích thước 100 tuân theo phân phối Poisson\n",
+        "sample_2 = stats.poisson.rvs(loc=20, mu = 1, size = 100)\n",
+        "print(sample_2[:10])"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[21 21 21 21 20 20 21 22 20 23]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -173,25 +173,32 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0ab65a88-4054-41a3-df95-767a99e1faea"
+        "outputId": "613b43cd-2f0c-4c0b-af9c-e26c3bc3ef63"
       },
       "source": [
-        "import numpy as np\n",
-        "from scipy import stats\n",
-        "from scipy.stats import bartlett\n",
-        "\n",
         "#Code kiểm định tính chất thứ 2 của sample_1 và sample_2\n",
         "# Kiểm định Shapiro-Wilk để xác định xem một mẫu có đến từ phân phối chuẩn hay không.\n",
+        "from scipy.stats import shapiro\n",
         "print(\"Kiểm định Shapiro-Wilk để xem mẫu có tuân theo phân phối chuẩn\")\n",
         "shapiro_test1 = stats.shapiro(sample_1) \n",
         "print(\"Statistic =\", shapiro_test1[0], \"\\n\",\n",
         "      \"p value =\", shapiro_test1[1])\n",
+        "t1, p1 = shapiro(sample_1)\n",
+        "if p1 > 0.05:\n",
+        "  print(\"Chưa đủ bằng chứng thống kê để bác bỏ H0, Điều này ngụ ý Mẫu tuân theo phân phối chuẩn\")\n",
+        "else:\n",
+        "  print(\"Có bằng chứng thống kê để bác bỏ H0, Điều này ngụ ý Mẫu tuân không tuân theo phân phối chuẩn\")\n",
         "print(\"-----------------------------------------\")\n",
         "\n",
         "print(\"Kiểm định Shapiro-Wilk để xem mẫu có tuân theo phân phối Poisson\")\n",
         "shapiro_test2 = stats.shapiro(sample_2)\n",
         "print(\"Statistic =\", shapiro_test2[0], \"\\n\",\n",
-        "      \"p value =\", shapiro_test2[1])"
+        "      \"p value =\", shapiro_test2[1])\n",
+        "t2, p2 = shapiro(sample_2)\n",
+        "if p2 > 0.05:\n",
+        "  print(\"Chưa đủ bằng chứng thống kê để bác bỏ H0, Điều này ngụ ý Mẫu tuân theo phân phối chuẩn\")\n",
+        "else:\n",
+        "  print(\"Có bằng chứng thống kê để bác bỏ H0, Điều này ngụ ý Mẫu tuân không tuân theo phân phối chuẩn\")"
       ],
       "execution_count": null,
       "outputs": [
@@ -199,12 +206,14 @@
           "output_type": "stream",
           "text": [
             "Kiểm định Shapiro-Wilk để xem mẫu có tuân theo phân phối chuẩn\n",
-            "Statistic = 0.9926937818527222 \n",
-            " p value = 0.8689165711402893\n",
+            "Statistic = 0.9937525391578674 \n",
+            " p value = 0.929026186466217\n",
+            "Chưa đủ bằng chứng thống kê để bác bỏ H0, Điều này ngụ ý Mẫu tuân theo phân phối chuẩn\n",
             "-----------------------------------------\n",
             "Kiểm định Shapiro-Wilk để xem mẫu có tuân theo phân phối Poisson\n",
-            "Statistic = 0.9581913948059082 \n",
-            " p value = 0.002994443289935589\n"
+            "Statistic = 0.836934506893158 \n",
+            " p value = 4.0179504168236235e-09\n",
+            "Có bằng chứng thống kê để bác bỏ H0, Điều này ngụ ý Mẫu tuân không tuân theo phân phối chuẩn\n"
           ],
           "name": "stdout"
         }
@@ -239,36 +248,171 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TO-NBfHZPPcN",
+        "id": "An6SKTYQp5Oo"
+      },
+      "source": [
+        "f = {'Business Majors': np.random.normal(random.uniform(2, 5), 0.1, 35),\n",
+        "     'English Majors': np.random.normal(random.uniform(2, 5), 0.2, 35),\n",
+        "     'Math Majors': np.random.normal(random.uniform(2, 5), 0.15, 35),\n",
+        "     'Psych Majors': np.random.normal(random.uniform(2, 5), 0.1, 35)}\n",
+        "\n",
+        "df = pd.DataFrame(f)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 195
+        },
+        "id": "33by_r6dqILm",
+        "outputId": "f38c461a-0b8c-4a2a-e9e4-754f01aaa9ba"
+      },
+      "source": [
+        "df.head()"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Business Majors</th>\n",
+              "      <th>English Majors</th>\n",
+              "      <th>Math Majors</th>\n",
+              "      <th>Psych Majors</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>3.776453</td>\n",
+              "      <td>4.591470</td>\n",
+              "      <td>3.242969</td>\n",
+              "      <td>4.826897</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>3.736356</td>\n",
+              "      <td>4.376260</td>\n",
+              "      <td>3.134316</td>\n",
+              "      <td>4.845015</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>3.801095</td>\n",
+              "      <td>4.292427</td>\n",
+              "      <td>2.978053</td>\n",
+              "      <td>4.915098</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>3.571618</td>\n",
+              "      <td>4.663596</td>\n",
+              "      <td>2.808978</td>\n",
+              "      <td>4.915112</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>3.636418</td>\n",
+              "      <td>4.954425</td>\n",
+              "      <td>2.956341</td>\n",
+              "      <td>4.799797</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   Business Majors  English Majors  Math Majors  Psych Majors\n",
+              "0         3.776453        4.591470     3.242969      4.826897\n",
+              "1         3.736356        4.376260     3.134316      4.845015\n",
+              "2         3.801095        4.292427     2.978053      4.915098\n",
+              "3         3.571618        4.663596     2.808978      4.915112\n",
+              "4         3.636418        4.954425     2.956341      4.799797"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vdBxkPSaqjxe"
+      },
+      "source": [
+        "Bus = df['Business Majors']\n",
+        "Eng = df['English Majors']\n",
+        "Math = df['Math Majors']\n",
+        "Psy = df['Psych Majors']\n",
+        "alpha = 0.05"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d77ffb08-03b5-44a8-d9ad-05777262d0b1"
+        "id": "RlD2i3ntqw6-",
+        "outputId": "75008e6e-2976-4ab6-c548-54b9a34700a9"
       },
       "source": [
         "#Kiểm định bằng bartlett\n",
-        "alpha = 0.05\n",
-        "stat, pvalue = stats.bartlett(sample_1,sample_2)\n",
+        "stat, pvalue = stats.bartlett(Bus, Eng, Math, Psy)\n",
         "print(\"Statistic =\", stat, \"\\n\",\n",
         "      \"p value =\", pvalue)\n",
-        "if pvalue < alpha:\n",
-        "  print(\"Các quần thể không có phương sai bằng nhau\")\n",
+        "if pvalue > alpha:\n",
+        "  print(\"Chưa có bằng chứng thống kê để bác bỏ H0, Điều này ngụ ý rằng phương sai các mẫu bằng nhau\")\n",
         "else:\n",
-        "  print(\"Các quần thể có phương sai bằng nhau\")\n",
+        "  print(\"Có bằng chứng thống kê để bác bỏ H0, Điều này ngụ ý rằng Tồn tại ít nhất một cặp mẫu có phương sai khác nhau\")\n",
         "  #Xem phương sai của từng biến\n",
-        "  s1, s2 = [np.var(x, ddof=1) for x in [sample_1, sample_2]]\n",
-        "  print(\"Phương sai của sample_1 =\", s1,  \"\\n\",\n",
-        "       \"Phương sai của sample_2 =\", s2,  \"\\n\",)\n",
-        "     "
+        "  b, e, m, p = [np.var(x, ddof=1) for x in [Bus, Eng, Math, Psy]]\n",
+        "  print(\"Phương Sai của Bus =\", b, \"\\n\",\n",
+        "      \"Phương Sai của Eng =\", e, \"\\n\",\n",
+        "      \"Phương Sai của Math =\", m, \"\\n\",\n",
+        "      \"Phương Sai của Psy =\", p, \"\\n\",)"
       ],
       "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Statistic = 63.63450355500454 \n",
-            " p value = 1.4978261721524518e-15\n",
-            "Các quần thể không có phương sai bằng nhau\n"
+            "Statistic = 54.550549076148066 \n",
+            " p value = 8.562321507319656e-12\n",
+            "Có bằng chứng thống kê để bác bỏ H0, Điều này ngụ ý rằng Tồn tại ít nhất một cặp mẫu có phương sai khác nhau\n",
+            "Phương Sai của Bus = 0.008056440248520777 \n",
+            " Phương Sai của Eng = 0.06931919525239623 \n",
+            " Phương Sai của Math = 0.019342220310734383 \n",
+            " Phương Sai của Psy = 0.008853287626957689 \n",
+            "\n"
           ],
           "name": "stdout"
         }
@@ -281,22 +425,23 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "136dd744-81af-4079-c52d-ea63eee17fb2"
+        "outputId": "a6d5e8cc-6eb9-44ff-9150-93ef0393be4a"
       },
       "source": [
-        "\n",
         "#Kiểm định bằng Levene\n",
-        "stat, pvalue = stats.levene(sample_1,sample_2)\n",
-        "print(\"Statistic =\", stat, \"\\n\",\n",
-        "      \"p value =\", pvalue)\n",
-        "if pvalue < alpha:\n",
-        "  print(\"Các quần thể không có phương sai bằng nhau\")\n",
+        "stat1, pvalue = stats.levene(Bus, Eng, Math, Psy)\n",
+        "print(\"Statistic =\", stat1, \"\\n\",\n",
+        "      \"p value =\", pvalue1)\n",
+        "if pvalue > alpha:\n",
+        "  print(\"Chưa có bằng chứng thống kê để bác bỏ H0, Điều này ngụ ý rằng phương sai các mẫu bằng nhau\")\n",
         "else:\n",
-        "  print(\"Các quần thể có phương sai bằng nhau\")\n",
+        "  print(\"Có bằng chứng thống kê để bác bỏ H0, Điều này ngụ ý rằng Tồn tại ít nhất một cặp mẫu có phương sai khác nhau\")\n",
         "  #Xem phương sai của từng biến\n",
-        "  s1, s2  = [np.var(x, ddof=1) for x in [sample_1,sample_2]]\n",
-        "  print(\"PS của Bus =\", s1, \"\\n\",\n",
-        "      \"PS của Eng =\", s2, \"\\n\",)\n",
+        "  b, e, m, p = [np.var(x, ddof=1) for x in [Bus, Eng, Math, Psy]]\n",
+        "  print(\"Phương Sai của Bus =\", b, \"\\n\",\n",
+        "      \"Phương Sai của Eng =\", e, \"\\n\",\n",
+        "      \"Phương Sai của Math =\", m, \"\\n\",\n",
+        "      \"Phương Sai của Psy =\", p, \"\\n\",)\n",
         "     "
       ],
       "execution_count": null,
@@ -304,9 +449,14 @@
         {
           "output_type": "stream",
           "text": [
-            "Statistic = 41.69225607760287 \n",
-            " p value = 8.076040873195272e-10\n",
-            "Các quần thể không có phương sai bằng nhau\n"
+            "Statistic = 11.951701689664675 \n",
+            " p value = 5.393497898754758e-07\n",
+            "Có bằng chứng thống kê để bác bỏ H0, Điều này ngụ ý rằng Tồn tại ít nhất một cặp mẫu có phương sai khác nhau\n",
+            "Phương Sai của Bus = 0.008056440248520777 \n",
+            " Phương Sai của Eng = 0.06931919525239623 \n",
+            " Phương Sai của Math = 0.019342220310734383 \n",
+            " Phương Sai của Psy = 0.008853287626957689 \n",
+            "\n"
           ],
           "name": "stdout"
         }
