--- a/huong_dan_du_lieu_ANOVA.ipynb
+++ b/huong_dan_du_lieu_ANOVA.ipynb
@@ -66,7 +66,7 @@
         "import numpy as np\n",
         "import pandas as pd"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -81,7 +81,7 @@
         "social_use = np.random.choice(social_levels, 100, p = [0.2, 0.5, 0.3])\n",
         "hours = np.random.choice(8, 100)"
       ],
-      "execution_count": 9,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -92,13 +92,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 195
         },
-        "outputId": "0667b04f-2dc2-45c4-b44c-f9958ee677bd"
+        "outputId": "1586d113-810b-486d-d8d9-623cef06f65b"
       },
       "source": [
         "df = pd.DataFrame({'Social Use': social_use, 'Hour Use': hours})\n",
         "df.head()"
       ],
-      "execution_count": 11,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -168,7 +168,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 3
         }
       ]
     },
@@ -189,7 +189,7 @@
           "height": 195
         },
         "id": "77aaZ8EAxK_D",
-        "outputId": "9b1dfa63-761a-4573-dba1-351589dcec8a"
+        "outputId": "9a4dba43-afbc-4b3b-9d7a-9c01b39cf025"
       },
       "source": [
         "#Không phải phân phối chuẩn\n",
@@ -202,7 +202,7 @@
         "df0 = pd.DataFrame(Social_Use, columns = (\"Low\", \"Medium\", \"High\"))\n",
         "df0.head()"
       ],
-      "execution_count": 8,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -234,33 +234,33 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>1</td>\n",
-              "      <td>4</td>\n",
-              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>2</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>0</td>\n",
-              "      <td>0</td>\n",
               "      <td>4</td>\n",
+              "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
+              "      <td>1</td>\n",
               "      <td>3</td>\n",
-              "      <td>2</td>\n",
-              "      <td>2</td>\n",
+              "      <td>3</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>0</td>\n",
-              "      <td>4</td>\n",
               "      <td>2</td>\n",
+              "      <td>3</td>\n",
+              "      <td>3</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>3</td>\n",
               "      <td>4</td>\n",
-              "      <td>3</td>\n",
+              "      <td>1</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -268,17 +268,17 @@
             ],
             "text/plain": [
               "   Low  Medium  High\n",
-              "0    1       4     1\n",
-              "1    0       0     4\n",
-              "2    3       2     2\n",
-              "3    0       4     2\n",
-              "4    3       4     3"
+              "0    0       2     0\n",
+              "1    0       4     1\n",
+              "2    1       3     3\n",
+              "3    2       3     3\n",
+              "4    3       4     1"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 4
         }
       ]
     },
@@ -319,7 +319,7 @@
           "height": 195
         },
         "id": "nizsKPEGxK_L",
-        "outputId": "5dac2a7b-55b9-4dbe-fcc5-92ea16a09159"
+        "outputId": "e41780a7-0a27-40fc-d2f5-a9bef46f89df"
       },
       "source": [
         "#Sinh ngẫu nhiên điểm của các sinh viên của từng năm: zise = 50, grade = 5\n",
@@ -333,7 +333,7 @@
         "df = pd.DataFrame(list_of_tuples, columns = [\"Năm 1\", \"Năm 2\", \"Năm 3\", \"Năm 4\"])\n",
         "df.head()"
       ],
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -367,37 +367,37 @@
               "    <tr>\n",
               "      <th>0</th>\n",
               "      <td>3</td>\n",
-              "      <td>0</td>\n",
               "      <td>1</td>\n",
+              "      <td>0</td>\n",
               "      <td>3</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>0</td>\n",
-              "      <td>3</td>\n",
-              "      <td>2</td>\n",
               "      <td>1</td>\n",
+              "      <td>4</td>\n",
+              "      <td>3</td>\n",
+              "      <td>4</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>3</td>\n",
-              "      <td>1</td>\n",
-              "      <td>3</td>\n",
-              "      <td>2</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>4</td>\n",
               "      <td>0</td>\n",
               "      <td>1</td>\n",
               "      <td>3</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>1</td>\n",
+              "      <td>2</td>\n",
+              "      <td>3</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>2</td>\n",
-              "      <td>3</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
+              "      <td>4</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -405,17 +405,17 @@
             ],
             "text/plain": [
               "   Năm 1  Năm 2  Năm 3  Năm 4\n",
-              "0      3      0      1      3\n",
-              "1      0      3      2      1\n",
-              "2      3      1      3      2\n",
-              "3      4      0      1      3\n",
-              "4      2      3      0      0"
+              "0      3      1      0      3\n",
+              "1      1      4      3      4\n",
+              "2      0      1      3      1\n",
+              "3      1      2      3      0\n",
+              "4      2      4      1      1"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 5
         }
       ]
     },
@@ -434,11 +434,21 @@
         "id": "bfRHP4QjxK_M"
       },
       "source": [
-        "Phát biểu của bạn ở đây: mean = {0,5}\n",
-        "                         alpha = 0.05\n",
-        "                         size mỗi mẫu = 50\n",
+        "Phát biểu của bạn ở đây: \n",
+        " + μ1 : điểm trung bình của sinh viên năm 1\n",
+        " + μ2 : điểm trung bình của sinh viên năm 2\n",
+        " + μ3 : điểm trung bình của sinh viên năm 3\n",
+        " + μ4 : điểm trung bình của sinh viên năm 4\n",
+        " \n",
+        "Ha: Tồn tại ít nhất một cặp (μi,μj) có giá trị khác nhau\n",
+        "- mean = {0,5}\n",
+        "- alpha = 0.05\n",
+        "- size mỗi mẫu = 50\n",
         "\n",
-        "Xây dựng giả thuyết:$$H_{0}: \\mu_{1} = \\mu_{2} = \\mu_{3} = \\mu_{4}$$Giả thuyết thay thế:$$H_{a}: \\mu_{1} \\neq \\mu_{2}(\\neq \\mu_{3},\\mu_{4})$$"
+        "Xây dựng giả thuyết:\n",
+        "$$H_{0}: \\mu_{1} = \\mu_{2} = \\mu_{3} = \\mu_{4}$$\n",
+        "Giả thuyết thay thế:\n",
+        "$$H_{a}: \\mu_{1} \\neq \\mu_{2}(\\neq \\mu_{3},\\mu_{4})$$"
       ]
     },
     {
@@ -458,13 +468,13 @@
           "height": 440
         },
         "id": "2Nkz6qSjxK_N",
-        "outputId": "c2bcfbda-6255-4835-d5fc-522f6f1d7b79"
+        "outputId": "85fd9e8e-1f4e-4924-e7df-936ca3cb8da9"
       },
       "source": [
         "from IPython.display import Image\n",
         "Image(\"https://adata.site.wesleyan.edu/files/2017/10/Pic3.png\")"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -477,7 +487,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 6
         }
       ]
     },
@@ -506,7 +516,7 @@
           "height": 195
         },
         "id": "gWIL9DLpxK_O",
-        "outputId": "3caf4dba-1973-472b-875d-7d92d2c7cc00"
+        "outputId": "68c37653-ad0f-4a04-a6a3-8d9058c74fa9"
       },
       "source": [
         "#Xây dựng dữ liệu mô phỏng\n",
@@ -519,7 +529,7 @@
         "df2 = pd.DataFrame(list_of_tuples, columns = [\"Business Majors\", \"English Majors\", \"Math Majors\", \"Psych Majors\"])\n",
         "df2.head()"
       ],
-      "execution_count": 4,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -552,38 +562,38 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>3</td>\n",
-              "      <td>4</td>\n",
+              "      <td>0</td>\n",
               "      <td>7</td>\n",
-              "      <td>2</td>\n",
+              "      <td>6</td>\n",
+              "      <td>4</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>4</td>\n",
-              "      <td>5</td>\n",
-              "      <td>5</td>\n",
-              "      <td>8</td>\n",
+              "      <td>6</td>\n",
+              "      <td>0</td>\n",
+              "      <td>7</td>\n",
+              "      <td>2</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>6</td>\n",
-              "      <td>2</td>\n",
-              "      <td>0</td>\n",
               "      <td>3</td>\n",
+              "      <td>5</td>\n",
+              "      <td>7</td>\n",
+              "      <td>9</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
+              "      <td>8</td>\n",
               "      <td>3</td>\n",
-              "      <td>0</td>\n",
-              "      <td>7</td>\n",
-              "      <td>5</td>\n",
+              "      <td>9</td>\n",
+              "      <td>8</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
+              "      <td>4</td>\n",
               "      <td>8</td>\n",
               "      <td>2</td>\n",
+              "      <td>1</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -591,17 +601,17 @@
             ],
             "text/plain": [
               "   Business Majors  English Majors  Math Majors  Psych Majors\n",
-              "0                3               4            7             2\n",
-              "1                4               5            5             8\n",
-              "2                6               2            0             3\n",
-              "3                3               0            7             5\n",
-              "4                0               1            8             2"
+              "0                0               7            6             4\n",
+              "1                6               0            7             2\n",
+              "2                3               5            7             9\n",
+              "3                8               3            9             8\n",
+              "4                4               8            2             1"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 8
         }
       ]
     }
